--- a/Ibaraki Beta Weight/My Project/Resources.resx
+++ b/Ibaraki Beta Weight/My Project/Resources.resx
@@ -151,7 +151,7 @@
   <data name="iUpdate" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iUpdate.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="key_serial" xml:space="preserve">
+  <data name="key_ser" xml:space="preserve">
     <value>WUFOIOiMqOWfjiAo44OZ44K/KSDph43ph48=</value>
     <comment>số seri</comment>
   </data>
